--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./app.js" defer></script>
-    <!-- <script src="./build/bundle.js" defer></script> -->
+    <div>
+        <script type="module" src="./app/app.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script>
+        <!-- <script src="./build/prod.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script> -->
+    </div>
 </body>
 </html>
