--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> -->
         <script type="module" src="./app/app.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script>
         <!-- <script src="./build/prod.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script> -->
     </div>
