--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <!-- use xlsx.full.min.js from version 0.20.3 -->
+    <script
+      type="text/javascript"
+      src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"
+    ></script>
+  </head>
+  <body>
     <div>
-        <script type="module" src="../app/app.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script>
-        <!-- <script src="./build/prod.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script> -->
+      <script
+        type="module"
+        src="../app/app.js"
+        id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"
+      ></script>
+      <!-- <script src="./build/prod.js" id="c447f2f0-11ee-4833-9f95-cd7c08ba671e"></script> -->
     </div>
-</body>
+  </body>
 </html>
